--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- link to stylesheets - css, fontawesome -->
+    <!-- link to stylesheets - css, fontawesome, lightbox-->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/vendors/css/glightbox.min.css">
     <title>Sarah's Salon</title>
   </head>
   <body>
@@ -60,6 +61,79 @@
         </div>
       </div>
     </nav>
+
+    <!-- intro -->
+    <section id="home" class="intro">
+      <div class="container">
+        <div class="row align-items-center text-white">
+          <!-- text content for intro -->
+          <div class="col-md-6 intros text-start">
+            <h1 class="display-2">
+              <span class="display-2--intro">Hey!I'm Sarah</span>
+              <span class="display-2--description 1h-base">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                quasi accusamus maxime vitae! Nam voluptas, magnam reprehenderit
+                nesciunt ducimus odio eos eveniet sit laudantium neque suscipit
+                possimus maxime ab non!
+              </span>
+            </h1>
+            <button type="button" class="rounded-pill btn-rounded">
+              Get in touch
+              <span><i class="fas fa-arrow-right"></i></span>
+            </button>
+          </div>
+          <!-- video content for intro -->
+          <div class="col-md-6 intros text-end">
+            <div class="video-box">
+              <img
+                src="/assets/img/introImg.png"
+                alt="image of a superwomen"
+                class="img-fluid"
+              />
+              <a
+                href="#"
+                class="
+                  glightbox
+                  position-absolute
+                  top-50
+                  start-50
+                  translate-middle
+                "
+              >
+                <span>
+                  <i class="fas fa-play-circle"></i>
+                </span>
+                <div class="border-animation border-animation--border-1"></div>
+                </span>
+                <span
+                  class="border-animation border-animation--border-1"
+                ></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,224L34.3,186.7C68.6,149,137,75,206,85.3C274.3,96,343,192,411,229.3C480,267,549,245,617,202.7C685.7,160,754,96,823,106.7C891.4,117,960,203,1029,245.3C1097.1,288,1166,288,1234,266.7C1302.9,245,1371,203,1406,181.3L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <section id="products"></section>
+
+    
+    <script src="/assets/vendors/js/glightbox.min.js"></script>
+    <script type="text/javascript">
+    // setting for glightbox
+    const lightbox = GLightbox({
+        href: "https://youtu.be/ScMzIvxBSi4",
+        type: "video",
+        source: "youtube", //vimeo, youtube or local
+        width: 900,
+      });
+    </script>
     <script src="/assets/js/bootstrap.bundle.js"></script>
   </body>
 </html>
