--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- link to stylesheets - css, fontawesome, lightbox-->
+    <!-- link to stylesheets - css, fontawesome, lightbox, google fonts-->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/fontawesome.css" />
     <link rel="stylesheet" href="/assets/vendors/css/glightbox.min.css">
+     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Sarah's Salon</title>
   </head>
   <body>
@@ -63,7 +67,7 @@
     </nav>
 
     <!-- intro -->
-    <section id="home" class="intro">
+   <section id="home" class="intro-section">
       <div class="container">
         <div class="row align-items-center text-white">
           <!-- text content for intro -->
@@ -87,7 +91,7 @@
             <div class="video-box">
               <img
                 src="/assets/img/introImg.png"
-                alt="image of a superwomen"
+                alt="super women"
                 class="img-fluid"
               />
               <a
@@ -113,7 +117,7 @@
           </div>
         </div>
       </div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
           fill-opacity="1"
@@ -121,7 +125,53 @@
         ></path>
       </svg>
     </section>
-    <section id="products"></section>
+
+    <!-- brands -->
+    <section id="brands" class="brands">
+      <div class="container">
+        <div class="row text-center">
+          <h4 class="fw-bold lead mb-3">Trusted Brands</h4>
+            <div class="heading-line mb-5"></div>  
+        </div>
+      </div>
+
+      <!-- brands logo -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand1.jpg" alt="logo1" >
+          </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand2.jpg" alt="logo2" >
+          </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand3.jpg" alt="logo3" >
+          </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand4.jpg" alt="logo4" >
+          </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand5.jpg" alt="logo5" >
+          </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="brands__logo-box shadow-sm">
+            <img src="assets/img/brands/brand6.jpg" alt="logo6" >
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
 
     
     <script src="/assets/vendors/js/glightbox.min.js"></script>
