--- a/index.html
+++ b/index.html
@@ -412,6 +412,78 @@
 
 </section>
 
+<!-- faq -->
+<section id="faq" class="faq">
+  <div class="container">
+    <div class="row text-center">
+      <h1 class="display-3 fw-bold text-uppercase">faq</h1>
+      <div class="heading-line"></div>
+      <p class="lead">Frequently asked questions</p>
+      </div>
+      <!-- accordion -->
+      <div class="row mt5"> 
+        <div class="col-md-12"> 
+      <div class="accordion" id="accordionExample">
+        <!-- item 1 -->
+  <div class="accordion-item shadow mb-3">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        How to book an appointment?
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, doloribus.</strong> 
+      </div>
+    </div>
+  </div>
+
+  <!-- item 2 -->
+  <div class="accordion-item shadow mb-3">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        How to get a skin consultant?
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A corrupti consequatur ab nihil ratione. Numquam.</strong> 
+      </div>
+    </div>
+  </div>
+
+  <!-- item 3 -->
+  <div class="accordion-item shadow mb-3">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Opening hours
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum facere, quis sint fugit quam earum distinctio. Velit laudantium amet a?</strong> 
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Can I be refunded if am not satisfied?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eveniet voluptate officiis minima omnis quas maxime saepe voluptatibus, dolor repellat?</strong>
+              </div>
+            </div>
+          </div>
+  </div>
+  </div>
+</div>
+  </div>
+</section>
+
+
     
 
     
