--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
     <!-- filter buttons -->
     <div class="row mt-5 mb-4 g-3 text-center">
       <div class="col-md-12" id="portfolio-btn">
-        <button type="button" class="btn btn-outline-primary active" onclick="filterSelection('all')">All</button>
-        <button type="button" class="btn btn-outline-primary" onclick="filterSelection('beauty')">Beauty</button>
-        <button type="button" class="btn btn-outline-primary" onclick="filterSelection('nails')">Nials</button>
-        <button type="button" class="btn btn-outline-primary" onclick="filterSelection('hair')">Hair</button>
+        <button type="button" class="btn active" onclick="filterSelection('all')">All</button>
+        <button type="button" class="btn" onclick="filterSelection('beauty')">Beauty</button>
+        <button type="button" class="btn" onclick="filterSelection('nails')">Nials</button>
+        <button type="button" class="btn" onclick="filterSelection('hair')">Hair</button>
      </div>
     </div>
 
@@ -662,6 +662,121 @@
   </div>
   </div>
 </section>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <!-- mobile number -->
+      <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+        <div class="contact-box__icon">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1.5"  fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+  <path d="M15 7a2 2 0 0 1 2 2" />
+  <path d="M15 3a6 6 0 0 1 6 6" />
+</svg>
+        </div>
+        <div class="contact-box__info">
+          <a href="#" class="contact-box__info--title"> + 123 45678</a>
+          <p class="contact-box__info--subtitle">  Tues-Sat 9am-6pm</p>
+        </div>
+      </div>  
+      <!-- email -->
+      <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+        <div class="contact-box__icon">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <polyline points="3 9 12 15 21 9 12 3 3 9" />
+  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+  <line x1="3" y1="19" x2="9" y2="13" />
+  <line x1="15" y1="13" x2="21" y2="19" />
+</svg>
+        </div>
+        <div class="contact-box__info">
+          <a href="#" class="contact-box__info--title">info@sarahsalon.com</a>
+          <p class="contact-box__info--subtitle">Email us</p>
+        </div>
+      </div>
+      <!-- location -->
+      <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+        <div class="contact-box__icon">
+         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <circle cx="12" cy="11" r="3" />
+  <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+</svg>
+        </div>
+        <div class="contact-box__info">
+          <a href="#" class="contact-box__info--title">Clare</a>
+          <p class="contact-box__info--subtitle">Ireland</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- social media -->
+  <div class="footer-sm" style="background-color: #212121;">
+    <div class="container">
+      <div class="row py-4 text-center text-white">
+        <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+          connect with us on social media
+        </div>
+        <div class="col-lg-7 col-md-6">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- comapny info -->
+  <div class="container mt-5">
+    <div class="row text-white justify-content-center mt-3 pb-3">
+      <div class="col-12 col-sm-6 col-lg-6 mx-auto">
+        <h5 class="text-capitalize fw-bold">Sarah's Salon</h5>
+        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+        <p class="lh-lg">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ex obcaecati blanditiis reprehenderit ab mollitia voluptatem consectetur?
+        </p>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+        <h5 class="text-capitalize fw-bold">Products</h5>
+        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+        <ul class="list-inline company-list">
+          <li><a href="#">Hair</a></li>
+          <li><a href="#">Nials</a></li>
+          <li><a href="#">Beauty</a></li>
+          
+        </ul>
+      </div>
+       <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+        <h5 class="text-capitalize fw-bold">useful links</h5>
+        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+        <ul class="list-inline company-list">
+          <li><a href="#"> Book appointment</a></li>
+          <li><a href="#">Get advice</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+        <h5 class="text-capitalize fw-bold">contact</h5>
+        <hr class="bg-white d-inline-block mb-4" style="width: 60px; height: 2px;">
+        <ul class="list-inline company-list">   
+          <li><a href="#"></a></li>
+          <li><a href="#">Co.Clare, Ireland</a></li>
+          <li><a href="#"> + 123 45678</a></li>
+          <li><a href="#">info@sarahsalon.com</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+</footer>
+
+<!-- BACK TO TOP BUTTON  -->
+<a href="#" class="shadow btn-primary rounded-circle back-to-top">
+  <i class="fas fa-chevron-up"></i>
+</a>
+
 
 
     
@@ -677,10 +792,10 @@
         width: 900,
       });
 
-   filterSelection("all")
+filterSelection("all");
 function filterSelection(c) {
   var x, i;
-  x = document.getElementsByClassName("portfolio-box");
+  x = document.querySelectorAll(".portfolio-box");
   if (c == "all") c = "";
   for (i = 0; i < x.length; i++) {
     w3RemoveClass(x[i], "show");
@@ -711,13 +826,14 @@ function w3RemoveClass(element, name) {
 
 
 // Add active class to the current button (highlight it)
-var btnContainer = document.getElementById("portfolio-btn");
-var btns = btnContainer.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
+var btnContainer = document.querySelector("#portfolio-btn");
+var btns = btnContainer.querySelectorAll(".btn");
+for (var i = 0, len = btns.length; i < len; ++ i){
   btns[i].addEventListener("click", function(){
-    var current = document.getElementsByClassName("active");0000000000000000000000000000
-    current[0].className = current[0].className.replace(" active", "");
-    this.className += " active";
+    var current = document.getElementsByClassName("active");
+    console.log(current);
+    current[i].className = current[i].className.replace("active", "");
+    this.className += "active";
   });
 }
 </script>
